--- a/Website/index.html
+++ b/Website/index.html
@@ -49,7 +49,7 @@
       background-color: var(--background2-color);
       color: var(--whitetext-color);
       border: none;
-      /* resize: vertical; */
+      resize: none;
     }
 
     button {
